<resources>
    <string name="app_name">TV-HUB</string>
    <string name="title_log_in">WELCOME TO TELEVISION HUB</string>
    <string name="signUp">Sign Up</string>
    <string name="switchSignUp">Your new user, Sign Up</string>
    <string name="switchSignIn">Back to, Sign In</string>
    <string name="version">Version 0.1</string>

    <string name="Stext1">Get</string>
    <string name="signIn">Sign In</string>
    <string name="Stext2">Started</string>
    <string name="Sbutton">Shop Now</string>

    <string name="title_activity_navigaton">Navigaton</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_notofication">Notification</string>
    <string name="menu_history">History</string>
    <string name="menu_myaccount">My Account</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_location">Location</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="submit">SUBMIT</string>
    <string name="buynow">Buy Now</string>
    <string name="addcart">Add to cart</string>


    <string name="search">Search</string>
    <string name="television">Television</string>
    <string name="description">Description</string>


    <string name="my">my</string>
    <string name="ourshop">our Shop</string>
    <string name="account">Account</string>
    <string name="myaccount">my Account</string>
    <string name="choose">Choose</string>

    <string name="process">PROCESS</string>
    <string name="rs">Rs.</string>
    <string name="available">Item Available</string>
    <string name="bought">Item bought</string>


    <string name="call">Contact Us : +94 715667833</string>
    <string name="callnow">Call Now</string>
    <string name="email">Email : televisionhub@gmail.com</string>


</resources>