<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="lk.javainstitute.tv_hub.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="lk.javainstitute.tv_hub.ui.Cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="lk.javainstitute.tv_hub.ui.Notification.NotificationFragment"
        android:label="@string/menu_notofication"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/nav_history"
        android:name="lk.javainstitute.tv_hub.ui.History.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_myaccount"
        android:name="lk.javainstitute.tv_hub.ui.MyAccount.AccountFragment"
        android:label="@string/menu_myaccount"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_nav_myaccount_to_nav_updateuser"
            app:destination="@id/nav_updateuser" />
    </fragment>

    <fragment
        android:id="@+id/nav_updateuser"
        android:name="lk.javainstitute.tv_hub.ui.updateUser.UpdateUserFragment"
        tools:layout="@layout/fragment_update_user">
        <action
            android:id="@+id/action_nav_updateuser_to_nav_myaccount"
            app:destination="@id/nav_myaccount" />
    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="lk.javainstitute.tv_hub.ui.Feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_location"
        android:name="lk.javainstitute.tv_hub.ui.Location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="lk.javainstitute.tv_hub.ui.aboutUs.aboutUsFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_about_us" />


</navigation>