<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Cart.CartFragment" >

    <!-- Existing views -->

    <!-- Existing views -->

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/koho_regular"
        android:text="@string/my"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/koho_regular"
        android:text="@string/menu_cart"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="@id/linearLayout5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <ImageView
            android:id="@+id/empty_view_image"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="24dp"
            android:src="@drawable/emptycart"
            android:visibility="gone" />

        <Button
            android:id="@+id/shop_Now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/koho_regular"
            android:text="@string/Sbutton"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="412dp"
        android:layout_height="135dp"
        android:background="@color/green"
        android:backgroundTint="@color/green"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Total Amount"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/process"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>