<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayoutabout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green2"
    android:backgroundTint="@color/green2"
    tools:context=".ui.aboutUs.aboutUsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/callNow"
            android:layout_width="109dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/callnow"
            android:textAlignment="textStart"
            android:textColor="@color/design_default_color_primary_variant"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView51"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView51"
            app:layout_constraintTop_toTopOf="@+id/textView51" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/menu_aboutus"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="24dp" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:inputType="text|textMultiLine"
            android:text="Step into the ultimate destination for all your home entertainment needs in Narammala city! Our shop offers a wide range of the latest televisions from top global brands, ensuring you find the perfect screen to suit your lifestyle. Whether you're looking for a sleek Smart TV with cutting-edge features, a high-performance LED TV, or a budget-friendly option, we have it all.  Our friendly and knowledgeable staff are here to guide you through the latest technology, including 4K Ultra HD, OLED, QLED, and more. We also provide expert advice on screen sizes, sound systems, and accessories to enhance your viewing experience.  Enjoy competitive prices, exclusive deals, and reliable after-sales service, including installation and warranty support. Visit us today and transform your living room into a cinematic paradise!"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/telephone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView50" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/call"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>